syntax = "proto3";

package chora.example.v1;

option go_package = "github.com/choraio/mods/example/types/v1";

// EventCreateContent is an event emitted when content is created.
message EventCreateContent {

  // id is the unique identifier of the content.
  uint64 id = 1;
}

// EventUpdateContent is an event emitted when content is updated.
message EventUpdateContent {

  // id is the unique identifier of the content.
  uint64 id = 1;
}

// EventDeleteContent is an event emitted when content is deleted.
message EventDeleteContent {

  // id is the unique identifier of the content.
  uint64 id = 1;
}
